--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -1125,10 +1125,14 @@ config RTC_DRV_DA9063
 
 config RTC_DRV_EFI
 	tristate "EFI RTC"
-	depends on EFI && !X86
+	depends on EFI
 	help
 	  If you say yes here you will get support for the EFI
 	  Real Time Clock.
+
+	  Note that soem X86 EFI systems have issues with ther
+	  implementation of this particular runtime service, and may
+	  behave in odd ways if you use this driver.
 
 	  This driver can also be built as a module. If so, the module
 	  will be called rtc-efi.
